Fix table content wrapping

--- a/_sass/newux/_newux_rpc.scss
+++ b/_sass/newux/_newux_rpc.scss
@@ -14,6 +14,7 @@
 
     th, td {
       padding: 5px;
+      overflow-wrap: break-word;
     }
 
     tbody tr:nth-child(odd) {
